--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                 <img src="images/network.jpg" alt="Computer networks project">
                 <p><b>Project Description:</b> Designed and implemented a network simulation with Cisco Packet Tracer to model and test various networking scenarios. Produced a detailed video demonstration of the simulations using OBS Studio, effectively showcasing the network setup and configurations. Gained hands-on experience in networking concepts, including network design and troubleshooting.</p>
                 <p><b>Technologies Used:</b> Cisco Packet Tracer, OBS studio</p>
-                <a href="videos/35271027_LUSHABA_T.mp4" target="_blank" rel="noopener noreferrer" class="project-button">Video Demonstration</a>
+                <a href="https://github.com/Thuli-007/Cisco-packet-tracer-project" target="_blank" rel="noopener noreferrer" class="project-button">GitHub Link</a>
             </div>
             <div class="project-card">
                 <h3>Watersort Puzzle Game</h3>
